--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <body>
 
-<h1>Welcome</h1>
-<p>This is a gateaway page.</p>
-
-<iframe src="https://01994219-c426-d5b6-b9ee-2cf3a6472447.share.connect.posit.cloud/" title="thekangaroofactory"></iframe> 
+<iframe src="https://01994219-c426-d5b6-b9ee-2cf3a6472447.share.connect.posit.cloud/" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;" title="thekangaroofactory">
+    Your browser doesn't support iframes
+</iframe>
 
 </body>
 </html>
