--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
- <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <body>
 
-<iframe src="https://01994219-c426-d5b6-b9ee-2cf3a6472447.share.connect.posit.cloud/" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;" title="thekangaroofactory">
+<iframe src="https://01994219-c426-d5b6-b9ee-2cf3a6472447.share.connect.posit.cloud/" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
     Your browser doesn't support iframes
 </iframe>
 
