--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Philippe PERET | TheKangarooFactory</title>
+    <meta name="description" content="Portfolio and Data Services. Power your business with automated data pipelines and carefully designed dashboards &amp; apps.">
+    <meta name="robots" content="all">
+    <link rel="shortcut icon" href="./img/favicon_196x196.png">
+  </head>
 <body>
 
 <iframe src="https://01994219-c426-d5b6-b9ee-2cf3a6472447.share.connect.posit.cloud/" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
