--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ window.onload = function() {
   params = loc.split('?')[1],
   iframe = document.getElementById('myIframe');
   
-  iframe.src = iframe.src + '?' + params;
+  iframe.src = "https://01994219-c426-d5b6-b9ee-2cf3a6472447.share.connect.posit.cloud/" + '?' + params;
 };
 </script>
 
